--- a/formulario/crear_usuario.html
+++ b/formulario/crear_usuario.html
@@ -5,75 +5,64 @@
 	<title>PHP</title>
 	<script type="text/javascript" src="js/javascript.js"></script>
 	<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-	<style type="text/css">
-		.error {
-			border: 1px solid red;
-		}
-
-		.p {
-			display: block;
-			color: red;
-		}
-	</style>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<header>
-		<h1>Sistema de Gestión de Personas</h1>
-	</header>
 
 	<section>
-		<div>
+		<div id="form">
+			<h1>Formulario</h1>
 			<form method="POST" action="php/crear_usuario.php" onsubmit="return validar()">
 				<table>
 					<tr>
 						<td><label>Cedula</label></td>
-						<td><input type="text" id="ced" name="ced" placeholder="ingresar contraseña" onchange="escribe(this)"></td>
+						<td><input type="text" id="ced" name="ced" placeholder="ingresa tu cédula" onfocus="escribe(this)" onkeyup="this.value = val_numero(this.value)"></td>
+						<td><spam id="c" style="display: none;">*error</spam></td>
 					</tr>
 
 					<tr>
 						<td><label>Nombre</label></td>
-						<td><input type="text" name="nom" placeholder="ingresar nombre" onchange="escribe(this)"></td>
+						<td><input type="text" name="nom" placeholder="ingresa tu nombre" onfocus="escribe(this)" onkeyup="this.value = val_letra(this.value)" onchange="this.value = dos_valores(this.value)"></td>
 					</tr>
 
 					<tr>
 						<td><label>Apellido</label></td>
-						<td><input type="text" name="ape" placeholder="ingresar apellido" onchange="escribe(this)"></td>
+						<td><input type="text" name="ape" placeholder="ingresa tu apellido" onfocus="escribe(this)" onkeyup="this.value = val_letra(this.value)" onchange="this.value = dos_valores(this.value)"></td>
 					</tr>
 
 					<tr>
 						<td><label>Dirección</label></td>
-						<td><input type="text" name="dir" placeholder="ingresar dirección" onchange="escribe(this)"></td>
+						<td><input type="text" name="dir" placeholder="ingresa tu dirección" onfocus="escribe(this)"></td>
 					</tr>
 
 					<tr>
 						<td><label>Teléfono</label></td>
-						<td><input type="text" name="tel" placeholder="ingresar número telefónico" onchange="escribe(this)"></td>
+						<td><input type="text" name="tel" placeholder="ingresa tu número telefónico" onfocus="escribe(this)" onkeyup="this.value = val_numero(this.value)"></td>
 					</tr>
 
 					<tr>
 						<td><label>Fecha de Nacimiento</label></td>
-						<td><input type="date" name="fec" onchange="escribe(this)"></td>
+						<td><input type="text" id="fec" name="fec" placeholder="dd/mm/yyyy" onfocus="escribe(this)"></td>
+						<td><spam id="f" style="display: none;">*error</spam></td>
 					</tr>
 
 					<tr>
 						<td><label>Email</label></td>
-						<td><input type="email" name="ema" placeholder="ingresar su email" onchange="escribe(this)"></td>
-					</tr>
-
-					<tr>
-						<td><label>Contraseña</label></td>
-						<td><input type="password" name="con" placeholder="ingrese su contraseña" onchange="escribe(this)"></td>
+						<td><input type="text" id="ema" name="ema" placeholder="ingresa tu email" onfocus="escribe(this)"></td>
+						<td><spam id="e" style="display: none;">*error</spam></td>
 					</tr>
 
 					<tr>
 						<td colspan="2">
-							<input type="submit" id="crear" name="crear" value="Aceptar">
-							<input type="reset" id="cancelar" name="cancelar" value="Cancelar">
+							<div id="btn">
+								<input type="submit" id="crear" name="crear" value="Aceptar">
+								<input type="reset" id="cancelar" name="cancelar" value="Cancelar">
+							</div>
 						</td>
 					</tr>
 				</table>
 			</form>
-			<p id="p" style="">Error, campos incompletos!</p>
+			<spam id="p" style="display: none;">Error, campos incompletos!</spam>
 		</div>
 	</section>
 </body>
