--- a/calculadora/calculadora.html
+++ b/calculadora/calculadora.html
@@ -3,13 +3,21 @@
 <head>
 	<title>Calculadora</title>
 	<style type="text/css">
-		table {
+		div {
 			width: 250px;
-			border: 1px solid black;
+			margin-right: auto;
+			margin-left: auto;
+			margin-top: 100px;
+		}
+
+		table {
+			width: 100%;
+			padding: 15px 8px;
+			border-radius: 5px;
+			background-color: rgba(154, 187, 181, 1);
 		}
 
 		th {
-			border: 1px solid black;
 			padding: 0px;
 			height: 40px;
 			width: 40px;
@@ -19,6 +27,7 @@
 			width: 100%;
 			height: 100%;
 			margin: 0px;
+			border-radius: 3px;
 		}
 
 		#res {
@@ -26,10 +35,11 @@
 			width: 247px;
 			margin: 0px;
 			background-color: #fff;
-			border: 1px solid black;
+			border-radius: 3px;
 			text-align: right;
 			padding-top: 20px;
 			padding-right: 5px;
+			margin-bottom: 10px;
 		}
 	</style>
 </head>
@@ -44,7 +54,7 @@
 			<tr>
 				<th><input type="button" id="ce" onclick="borrarResultado()" value="CE"></th>
 				<th><input type="button" id="c" onclick="borrarTodo()" value="C"></th>
-				<th><input type="button" id="bor" onclick="borrarUno()" value="<-"></th>
+				<th><input type="button" id="bor" onclick="borrarUno()" value="&#10094;"></th>
 				<th><input type="button" id="div" onclick="escribir(' / ')" value="/"></th>
 			</tr>
 
@@ -52,7 +62,7 @@
 				<th><input type="button" id="b7" onclick="escribir('7')" value="7"></th>
 				<th><input type="button" id="b8" onclick="escribir('8')" value="8"></th>
 				<th><input type="button" id="b9" onclick="escribir('9')" value="9"></th>
-				<th><input type="button" id="mul" onclick="escribir(' * ')" value="X"></th>
+				<th><input type="button" id="mul" onclick="escribir(' * ')" value="x"></th>
 			</tr>
 
 			<tr>
@@ -70,7 +80,7 @@
 			</tr>
 
 			<tr>
-				<th><input type="button" id="mm" onclick="" value=""></th>
+				<th><input type="button" id="mm" onclick="" value="" disabled="true"></th>
 				<th><input type="button" id="b0" onclick="" value="0"></th>
 				<th><input type="button" id="com" onclick="escribir('.')" value=","></th>
 				<th><input type="button" id="igl" onclick="resolver()" value="="></th>
